Added more test cases for milestone 4